--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@iconscout/react-unicons": "^2.0.2",
     "@types/node": "20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "scrollmagic": "^2.0.8",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
