--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "^14.0.4",
+    "framer-motion": "^11.11.8",
     "next": "^14.0.4",
-    "postcss": "8.4.24",
+    "portfolio": "file:",
+    "postcss": "^8.4.48",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
