--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "^14.0.4",
     "framer-motion": "^11.11.8",
     "next": "^14.0.4",
+    "nodemailer": "^6.9.15",
     "portfolio": "file:",
     "postcss": "^8.4.47",
     "react": "^18.2.0",
